dont sttop untill all done  for both frontend and backend build in sync
