# backend/src/modules/accounts/accounts.controller.ts
@@ -8,12 +8,17 @@ import {
   UseGuards,
   Req,
   ParseIntPipe,
+  Patch,
+  Delete,
+  HttpCode,
+  HttpStatus,
 } from '@nestjs/common';
 import { AccountsService } from './accounts.service';
 import { CreateAccountDto } from './dto/create-account.dto';
 import { JwtAuthGuard } from '../auth/jwt.guard';
 import { GetUser } from '../auth/get-user.decorator';
 import { User } from '../users/users.service';
+import { UpdateAccountDto } from './dto/update-account.dto';
 
 @UseGuards(JwtAuthGuard)
 @Controller('accounts')
@@ -36,5 +41,20 @@ export class AccountsController {
   findOne(@Param('id', ParseIntPipe) id: number, @GetUser() user: User) {
     // Pass organizationId to scope the query
     return this.accountsService.findOne(id, user.organizationId);
+  }
+
+  @Patch(':id')
+  update(
+    @Param('id', ParseIntPipe) id: number,
+    @Body() updateAccountDto: UpdateAccountDto,
+    @GetUser() user: User,
+  ) {
+    return this.accountsService.update(id, updateAccountDto, user.organizationId);
+  }
+
+  @Delete(':id')
+  @HttpCode(HttpStatus.NO_CONTENT)
+  remove(@Param('id', ParseIntPipe) id: number, @GetUser() user: User) {
+    return this.accountsService.remove(id, user.organizationId);
   }
 }
