# backend/src/modules/accounts/dto/update-account.dto.ts
@@ -1,0 +1,16 @@
+
+import { IsString, IsOptional, IsInt } from 'class-validator';
+
+export class UpdateAccountDto {
+  @IsString()
+  @IsOptional()
+  name?: string;
+
+  @IsString()
+  @IsOptional()
+  industry?: string;
+
+  @IsInt()
+  @IsOptional()
+  ownerId?: number;
+}
